UtahLiveDataTest/src/objects/PreApplicationBudgetCategory__c.object
<CustomObject>
    <description>[Business] Stores the Budget related information associated with an PreApplication</description>
    <fields>
        <fullName>Amount1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Costs Not Allowable for Participation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetCategoryAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Category</label>
        <referenceTo>BudgetCategory__c</referenceTo>
        <relationshipName>PreApplication_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Period</label>
        <referenceTo>BudgetPeriod__c</referenceTo>
        <relationshipLabel>PreApplication Budget Categories</relationshipLabel>
        <relationshipName>PreApplication_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BuildupRequired__c</fullName>
        <formula>Text(PreApplication__r.Announcement__r.DetailedBudgetingRequired__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BuildupRequired</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CatName__c</fullName>
        <formula>BudgetCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <label>Category Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassName__c</fullName>
        <formula>TEXT(BudgetCategory__r.Class__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency1__c</fullName>
        <label>Currency1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GranteeAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount from Grantee in PreApplication for each Budget Category</description>
        <inlineHelpText>Amount from Grantee in PreApplication for each Budget Category</inlineHelpText>
        <label>Grantee Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GranteeShare__c</fullName>
        <formula>If(Amount__c&lt;=0, 0, GranteeAmount__c / Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee Share %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GrantorAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Grantor Amount</description>
        <inlineHelpText>Grantor Amount</inlineHelpText>
        <label>Grantor Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HideBudgetEdit__c</fullName>
        <formula>If(BuildupRequired__c==&apos;No&apos; &amp;&amp; Status__c = &apos;Created&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Budget Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsBuildupRequired__c</fullName>
        <formula>If(BuildupRequired__c==&apos;No&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsBuildupRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFirstBudgetPeriodRelated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this record related to First BP ?</description>
        <inlineHelpText>Is this record related to First BP ?</inlineHelpText>
        <label>Is First Budget Period Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Narration__c</fullName>
        <description>Description for Budget Category</description>
        <label>Narrative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreAppBudgetCategoryStatus__c</fullName>
        <description>This field is used to determine which categories are to be used for Construction form.</description>
        <label>App Budget Category Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>InActive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreApplicationStatus__c</fullName>
        <formula>IF( ISPICKVAL(PreApplication__r.Status__c, &quot;Converted to Grant&quot;), TRUE, FALSE)</formula>
        <label>PreApplication Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreApplication__c</fullName>
        <label>PreApplication</label>
        <referenceTo>PreApplication__c</referenceTo>
        <relationshipName>PreApplication_Budget_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RequestedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RowNumber1__c</fullName>
        <label>Row Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RowNumberFormula__c</fullName>
        <formula>BudgetCategory__r.RowsNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RowNumber__c</fullName>
        <label>Row Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAreaTitle__c</fullName>
        <formula>ServiceArea__r.ServiceAreaTitle__c</formula>
        <label>Service Area Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Area</label>
        <referenceTo>PreApplicationServiceArea__c</referenceTo>
        <relationshipName>Application_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>text(PreApplication__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAllowableCosts__c</fullName>
        <description>This field is used in SF424 Budget Construction grid</description>
        <formula>BudgetCategoryAmount__c  -  RequestedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Allowable Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(BudgetCategory__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>PreApplication Budget Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PreApplication Budget Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AmountLessThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>The negotiated amount cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AmountLessThanZero1</fullName>
        <active>true</active>
        <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Total__c</errorDisplayField>
        <errorMessage>The negotiated amount cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequestedAmountLessThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>RequestedAmount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>RequestedAmount__c</errorDisplayField>
        <errorMessage>The requested amount cannot be less than zero.</errorMessage>
    </validationRules>
</CustomObject>